wp-content/themes/csweek/style.css
/* ... */
.add-to-calendar:hover{
}


.show{
  border: 1px solid red !important;
}

#menu{
  position: relative;
  top: -50px !important;
  padding: 0 5px;
  margin: 40px 0 0;
  z-index: 1000;
  float: left;
  width: 100%;
  clear: both;
  background: #333;
  border-top: 1px solid #666;
  border-bottom: 1px solid #666;
}

#menu .sub-menu{
  position: absolute;
  top: 41px;
  left: -25px;
  display: none;
  background: #333;
  padding: 5px;
  border: 1px solid #222;
  border-top: none;
  box-shadow: 2px 1px 5px rgba(0,0,0,.3);
  z-index: 3000;
  min-width: 240px;
}

#menu .sub-menu .menu-item{
  float: none;
  display: block;
  text-align: left;
}

#menu .sub-menu .menu-item:last-child a{
  border: none;
}

#menu .sub-menu .menu-item a{
  border-left: none;
  border-right: none;
}

#menu li:hover .sub-menu, .sub-menu:hover{
  display: block;
}

#menu li{
  vertical-align: top;
  float: left;
  position: relative;
}

#menu li a{
  font-family: 'Magra', sans-serif;
  font-size: 1em;
  font-weight: 500;
  text-transform: uppercase;
  color: white !important;
  padding: 10px;
  height: auto;
  width: auto;
  display: block;
  background: #333;
  border: 1px solid #222;
  border-right-color: #666;
  border-top: none;
  border-radius: 0;
}

#menu li a:hover, #menu li.current-menu-item a{
  background: #444;
  -webkit-transition: 0.6s;
  -moz-transition: 0.6s;
  transition: 0.6s;
}

.blog #menu li a, .single-post #menu li a, .page-template-contact-php #menu li a{
  color: #333;
}

.blog li, .single-post li{
  color: inherit !important;
}

.blog #page a, .single-post #page a{
  color: #A50606;
}
.blog #page .tags a, .single-post #page .tags a{
  color: #999;
}

#welcome{
  padding-top: 90px;
  border-top: 2px solid #555;
  background-color: #333;
  border-bottom: 3px solid #555;
  padding-bottom: 90px;
}

#welcome h2, #page h2{
  font-family: 'Lato', sans-serif;
  color: white;
  font-size: 26px;
  margin: 22px 0 30px 0;
  font-weight: 400;
}

#welcome h3, #page h3{
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  font-weight: 300;
  color: white;
}

#welcome h4{
  font-family: 'Magra', sans-serif;
  font-size: 16px;
  font-weight: normal;
  color: #999;
  line-height: 165%;
}

#welcome p, #page p{
  font-family: 'Magra', sans-serif;
  color: white;
  font-size: 16px;
/*  margin-bottom: 40px;
  font-weight: normal;*/
}

#open-registration{
  /*background: #F5C01D;*/
  width: 253px;
  margin-top: 35px;
  margin-bottom: 20px;
  border-radius: 4px;
}


#welcome .btn-save-the-date{
  /*text-transform: uppercase;*/
  margin: 0; !important
  width: 200px;
}

#open-registration .pad{
  padding: 3px;
}
#open-registration .inner{
  border: 1px solid white;
  /*padding-bottom: 20px;*/
}
#open-registration h2{

  font-family: 'Magra', sans-serif;
  color: #996533;
  font-size: 48px;
  text-align: center;
  text-transform: uppercase;
  font-weight: 500;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);

}

#open-registration h2 .open{
  font-size: 85px;
  font-weight: 700
}

#open-registration h2 span{
  margin: 5px 0;
  line-height: 92%;
}

#welcome .my-cal{
  /*background: rgba(255, 255, 255, 0.1);*/
  height: 53px;
  width: 191px;
  padding: 0 25px 0 50px;
  border-radius: 6px;
  /*box-shadow: inset 0 0 10px #333;*/
  margin-top: 17px;
  margin-bottom: 30px;
}

#calendarDiv{
  display: none;
  background-color: #F5C01D;
  padding: 12px 11px 20px 11px;
  text-align: left;
  border-radius: 0 0 6px 6px;
  border: 1px solid white;
  box-shadow: inset 0 0px 3px rgba(0, 0, 0, 0.25);
  margin: 0 -11px 0 0;
  position: relative;
  left: -10px;
  bottom: 30px;
  z-index: 2000;
}

#calmain{
  margin-top: 15px;
}

.calendarLine{
  margin-bottom: 7px;
}

.my-cal a{
  color: white;
  font-size: 17px;
  color: #996533;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
}

#calendarDiv a{
  font-size: 14px;
}

#sponsors{
  background: white;
  padding-top: 20px 0;
  border-top: 1px solid silver;
  border-bottom: 1px solid silver;
}

#sponsors .ysing-logo{
  width: 283px;
  display: block;
  margin: 0 auto;
}

#sponsors h2, #contact h2{
  font-family: 'Lato', sans-serif;
  color: #999;
  font-size: 18px;
  font-weight: 900;
  text-align: center;
  text-transform: uppercase;
  clear: both;
}

#sponsors h3, #contact h3{
  font-family: 'Lato', sans-serif;
  color: #D90000;
  font-size: 17px;
  text-transform: lowercase;
  clear: both;
}

#sponsors .learn-more{
  float: right;
  position: relative;
  bottom: -10px;
}

#sponsors a{
  color: #D90000;
  font-size: 14px;
  -webkit-transition: .2s linear;
  -moz-transition: .2s linear;
  transition: .2s linear;
  font-weight: 900;
  text-transform: lowercase;
}

#sponsors a:hover {
  color: #A50606;
}

.make-it-bigger{
  width: 200% !important;
}

#contact .btn-contact {
  margin: 0;
  margin-left: 42px;
}

#contact h3{
  margin-top: -1px;
  line-height: 150%;
  text-transform: none;
}

#contact #contact-info{
  margin-bottom: 0;
}

.sponsor-logos{
  text-align: center;
  padding: 20px 0 40px;
}

.sponsor-logo:hover{
	zoom: 1;
	filter: alpha(opacity=80);
	opacity: 0.8;
}

#support{
  border-bottom: 4px solid #EEE;
}

#support h2{
  float: left;
  margin-top: 95px;
  margin-right: 30px;
  font-size: 22px;
  font-weight: normal;
}

#support img{
  float: left;
  width: 120px;
  margin-top: 20px;
  margin-bottom: 20px;
}

#daily-topics{
  background: transparent url(images/welcome-bg.png);
  padding: 35px 0;
}

#daily-topics h3, #daily-topics h4{
  float: left;
  width: 100%;
  clear: both;
}

#daily-topics h3{
  font-family: 'Lato', sans-serif;
  font-size: 18px;
  font-weight: 500;
  color: #D90000;
}

#daily-topics h4{
  font-family: 'Magra', sans-serif;
  font-size: 16px;
  font-weight: 300;
  color: #666;
  line-height: 165%;
}

#daily-topics li{
  font-family: 'Magra', sans-serif;
  font-size: 16px;
  font-weight: 300;
  color: #666;
  line-height: 165%;
}


.list{
  float: left;
  width: 31%
}
/* ... */

